examples/test/testpolicy12111.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12111
  namespace: namespace340
spec:
  podSelector:
    matchLabels:
      key32: value20
      key43: value9
      key47: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value40
          key43: value20
          key44: value25
